<resources>
    <string name="app_name">My Fitness</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="enterHeight">Enter Height(cm)</string>
    <string name="enterWeight">Enter Weight(kg)</string>
    <string name="enterAge">Enter Age</string>
    <string name="BtnNext">Next</string>
    <string name="gender">Gender:</string>
    <string name="loading">Loading…</string>
    <string name="SCtext">Enjoy your walk</string>
    <string name="steps">Steps</string>
    <string name="burnedCal">Calories Burned</string>
    <string name="coveredDist">Distance Covered</string>
    <string name="btnSC">Step Counter</string>
    <string name="btnMC">Macros Calculator</string>
    <string name="btnFN">Fit Notes</string>
    <string name="btnRec">Recipes</string>
    <string name="btnGuides">Exercise Guides</string>
    <string name="Choose">Choose food :</string>
    <string name="age">Age:</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(cm):</string>
    <string name="chicken">Chicken with rice</string>
    <string name="edit">Edit Measurements</string>
    <string name="api_key">e17b90579a8e47e7ba8d78b7b4371946</string>
    <string name="nutritions">Nutritions Information</string>
    <string-array name="array_menu">
        <item>Chicken with rice(350g)</item>
        <item>Chicken with potatoes(350g)</item>
        <item>Pork with rice(350g)</item>
        <item>Pork with potatoes(350g)</item>
        <item>Pasta(250g)</item>
        <item>Pizza(400g)</item>
        <item>Low-calorie pizza(400g)</item>
        <item>Beef Burger(300g)</item>
        <item>Low-calorie Burger(300g)</item>
        <item>Scrambled eggs(250g)</item>
        <item>Banana(118g)</item>
        <item>Apple(182g)</item>
        <item>Pitted Dates(30g)</item>
        <item>Coca-Cola(500ml)</item>
        <item>Coca-Cola Zero(500ml)</item>
    </string-array>
    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverages</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
    <string-array name="muscle_group_exercise">
        <item>Muscle Group Chest</item>
        <item>Muscle Group Back</item>
        <item>Muscle Group Core</item>
        <item>Muscle Group Arms</item>
        <item>Muscle Group Legs</item>
    </string-array>
    <string-array name="muscle_group_description">
        <item>The chest muscles are responsible for moving the arms across the body and up and down, as well as other movements like flexion, adduction, and rotation. Most chest exercises involve pushing the arms away from the body or the body away from the arms. The stronger your chest muscles are, the stronger your entire body is.</item>
        <item>Many people train their chest, abdomen and shoulders in the gym, but not their back. As a result, only the front part of the body is stressed and neglecting the back has a higher potential for injury. Strengthening your back not only keeps you fit and keeps your posture straight, it also looks good. But most importantly, you minimize the risk of suffering from obnoxious pain. And that does not just apply to back pain - a "bad" back puts strain on the neck, which in turn leads to headaches and, in the worst cases, numbness in the arms and legs.</item>
        <item>Your core is the central part of your body. It includes your pelvis, lower back, hips and stomach. The stomach muscles sometimes are called abs. Core exercises train the muscles in your core to work in harmony. This leads to better balance and steadiness, also called stability. Stability is important whether you are on the playing field or doing regular activities. In fact, most sports and other physical activities depend on stable core muscles.</item>
        <item>Any pushing, pulling, reaching, or swinging movement of the arms requires a different set of muscles, and training those muscles can help you do everything from carrying a bag of groceries and picking up your dog to holding a plank pose in yoga and opening a heavy door.</item>
        <item>Lets face it, people walk, run, jump, keep going. Especially when you do running sports (such as running), training your leg muscles will benefit greatly from this. Stronger leg muscles and a core provide more stability. You also have much more explosive power, which is very useful for crossfit or HIIT. As a runner you will stumble less often and the chance of running injuries is much smaller.</item>
    </string-array>
    <string-array name="muscle_group_chest_exercises">
        <item>Bench Press</item>
        <item>Incline Bench Press</item>
        <item>Decline Bench Press</item>
        <item>Chest Flye</item>
        <item>Cable Crossover</item>
        <item>Dumbbell Bench Press</item>
        <item>Push-up</item>
        <item>Dip</item>
        <item>Machine Chest Press</item>
    </string-array>
    <string-array name="muscle_group_chest_exercises_description">
        <item>The bench press is a compound exercise that targets the muscles of the upper body. It involves lying on a bench and pressing weight upward using either a barbell or a pair of dumbbells. During a bench press, you lower the weight down to chest level and then press upwards while extending your arms. This movement is considered one repetition, or rep.</item>
        <item>The incline bench press is a variation of the bench press and an exercise used to build the muscles of the chest. The shoulders and triceps will be indirectly involved as well. Utilizing an incline will allow you to better target the upper portion of the chest, a lagging part for a lot of lifters. You can include incline bench press in your chest workouts, upper body workouts, push workouts, and full body workouts.</item>
        <item>The decline bench press is an excellent exercise for strengthening your lower chest muscles. It’s a variation of the flat bench press, a popular chest workout. In a decline bench press, the bench is set to 15 to 30 degrees on a decline. This angle places your upper body on a downward slope, which activates the lower pectoral muscles as you push weights away from your body. When part of a complete chest routine, decline bench presses can help your pecs look more defined.</item>
        <item>The dumbbell chest fly can help open up your chest muscles. Chest openers may help reduce upper back pain, increase range of motion, and reduce tightness in the upper body. If you’re doing dumbbell chest flies as a way to open up your chest muscles, consider using lighter weights, or even no weights. That can help you to get the full range of motion from the move without overextending. Extending too far may lead to an injury.</item>
        <item>The cable cross-over is an isolation movement that uses a cable stack to build bigger and stronger pectoral muscles. Since it is done using adjustable pulleys, you can target different parts of your chest by setting the pulleys at different levels. It is common in upper body and chest-focused muscle-building workouts, often as a pre-exhaust at the beginning of a workout, or a finishing movement at the end. It is often in combination with other presses or flyes to target the chest from different angles.</item>
        <item>Often times, the dumbbell bench press is recommended after reaching a certain point of strength on the barbell bench press to avoid pec and shoulder injuries. Additionally, the dumbbell bench press provides an ego check in the amount of weight used due to the need to maintain shoulder stability throughout the exercise. The exercise itself can be featured as a main lift in your workouts or an accessory lift to the bench press depending on your goals.</item>
        <item>The push-up builds both upper-body and core strength.1 It has many modifications; beginners can start with easier versions, while more advanced exercisers can use a challenging variation. You can do the push-up as part of a bodyweight exercise session, a circuit training workout, or a strength workout.</item>
        <item>Depending on the type of training you are doing, dips are one of the exercises that can often be easily forgotten, but are a great addition to your chest, shoulders and arm day workouts. Whether you are in a gym or outside or at home, there is always a piece of equipment around that you can use to add dips to any workout routine.</item>
        <item>The chest press helps build the pectoral muscles while also working the biceps, deltoids, and latissimus dorsi. The seated chest press is an upright version of the lying bench press and a great addition to an upper-body strength workout.</item>
    </string-array>
</resources>