<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepCounter"
    android:background="@color/MyFitnessDefault">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/SCtext"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320dp"
        android:layout_height="340dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:background="@drawable/circular_shape"
        android:max="8000"
        android:progressDrawable="@drawable/circular_progressbar" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="245dp"
        android:layout_height="471dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-27dp"
        android:background="@drawable/circular_shape"
        android:progressDrawable="@drawable/circular_progressbar" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-41dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/circular_shape"
        android:progressDrawable="@drawable/circular_progressbar" />

    <TextView
        android:id="@+id/stepsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/distanceCovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginLeft="282dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="0.00 km"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/caloriesBurned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginLeft="92dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/steps"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="51dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/burnedCal"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="270dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/coveredDist"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>